Réorganisation des fichiers pour GitHub Pages

--- a/projet GYM/contact.html
+++ b/projet GYM/contact.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" >
-    <link href="stylecontact.css" rel="stylesheet">
+    <link href="css/stylecontact.css" rel="stylesheet">
     <title>GymRats</title>
 </head>
 <body>
@@ -14,7 +13,7 @@
 
           <h1 class="logo lg-heading text-light"><i class="fa-solid fa-dumbbell"> GymRat </i> </h1>
             <ul class="nav-items">
-                <li class="nav-item"><a href="home.html"> Home</a></li>
+                <li class="nav-item"><a href="index.html"> Home</a></li>
                 <li class="nav-item"><a href="about.html">About</a></li>
                 <li class="nav-item"><a href="contact.html">Contact us</a></li>
             </ul>
