--- a/projet GYM/index.html
+++ b/projet GYM/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" >
     <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>GymRats</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="container">
                 <h1 class="logo lg-heading text-light" ><i class="fa-solid fa-dumbbell">GymRat</i> </h1>
                 <ul class="nav-items">
-                    <li class="nav-item"><a href="home.html"> Home</a></li>
+                    <li class="nav-item"><a href="index.html"> Home</a></li>
                     <li class="nav-item"><a href="about.html">About</a></li>
                     <li class="nav-item"><a href="contact.html">Contact us</a></li>
                 </ul>
@@ -33,7 +33,7 @@
     <section class="section" id="coach">
             <div class="container">
                 <div class="row row1">
-                    <div class="img-box"><img src="C:\Users\830 G5\Desktop\html\tries\projet\images\cbum.webp" alt="coach"></div>
+                    <div class="img-box"><img src="images/cbum.webp" alt="coach"></div>
                     <div class="text-box">
                         <h2 class="lg-heading text-black lt-space"> CBUM (Chris
                             Bumstead)</h2>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="row row2">
-                    <div class="img-box "><img src="C:\Users\830 G5\Desktop\html\tries\projet\images\Miranda-Cohen-Wallpaper-4k.jpg" alt="miranda"></div>
+                    <div class="img-box "><img src="images/Miranda-Cohen-Wallpaper-4k.jpg" alt="miranda"></div>
                     <div class="text-box">
                         <h2 class="lg-heading text-black lt-space">Miranda-Cohen</h2>
                         <p class="text-gray"> she is one of the famous fitness instructors and personal trainers. In her fitness journey, she also worked with many famous bodybuilders and fitness trainers. Apart from this, she also modeled for many top fitness brands. </p>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="row row3">
-                    <div class="img-box"><img src="C:\Users\830 G5\Desktop\html\tries\projet\images\wrnold.jpg" alt=" arnold"></div> 
+                    <div class="img-box"><img src="images/wrnold.jpg" alt=" arnold"></div> 
                     <div class="text-box">
                         <h2 class="lg-heading text-black lt-space">arnold (Arnold Alois Schwarzenegge)</h2>
                         <p class="text-gray">specialist in sports nutrition, sports coach (functional training for males) won the prestigious Mr. Olympia title seven times Mr. Olympia is one of the most prestigious bodybuilding competitions in the world.</p>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="row row4">
-                    <div class="img-box"><img src="C:\Users\830 G5\Desktop\html\tries\projet\images\majdouline.jpeg" alt=" majdouline"></div>
+                    <div class="img-box"><img src="images/majdouline.jpeg" alt=" majdouline"></div>
                     <div class="text-box">
                         <h2 class="lg-heading text-black lt-space">Majdouline Nasrollah</h2>
                         <p class="text-gray">specialist in sports nutrition, sports coach (functional training for females) founder of the HAPYY BODY brand (sports accessories & sports clothing + sports coaching), particularly known for resistance bands.</p>
