--- a/projet GYM/about.html
+++ b/projet GYM/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleabt.css">
+    <link rel="stylesheet" href="css/styleabt.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" >
     <title>GymRats</title>
 </head>
@@ -13,7 +13,7 @@
 
             <h1 class="logo lg-heading text-light"><i class="fa-solid fa-dumbbell">GymRat </i> </h1>
             <ul class="nav-items">
-                <li class="nav-item"><a href="home.html"> Home</a></li>
+                <li class="nav-item"><a href="index.html"> Home</a></li>
                 <li class="nav-item"><a href="about.html">About</a></li>
                 <li class="nav-item"><a href="contact.html">Contact us</a></li>
             </ul>
