Ajout des fichiers HTML et des ressources du projet GYM

--- a/projet GYM/index.html
+++ b/projet GYM/index.html
@@ -24,7 +24,7 @@
         <div class="container">
 
             <div class="header-content">
-                <h1 class="md-heading text-light"> Welcome to personal training (Coaching)</h1>
+                <h1 class="md-heading text-light"> Welcome to personal training <span> (Coaching) </span></h1>
                 <p class="text-light">  Train with us to get the body of your dreams </p>
                 <a href="#coach" class="btn btn-primary text-red md-heading">Specialits</a>
             </div>
